1.Add z-index to fix carousel position

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ header {
     background: #FFF;
     transform: translateX(-100%);
     transition: transform 0.5s;
+    z-index: 1;
 }
 
 .menu-burger.active {
@@ -70,12 +71,10 @@ a.links{
 }
 
 .hide{
-    display: none;
+    z-index: 0;
 }
 
-.show{
-    display: unset;
-}
+
 
 @media (max-device-width: 1400px) {
     .main-text{
@@ -91,7 +90,7 @@ a.links{
 
 @media (max-device-width: 991px) {
     .main-text{
-        margin-top: 0px;
+        margin-top: 0;
     }
 
     .menu{
@@ -105,7 +104,7 @@ a.links{
         width: 30px;
         height: 30px;
         position: relative;
-        z-index:2;
+        z-index: 2;
     }
 
     .menu-btn span {
